--- a/css/block2.css
+++ b/css/block2.css
@@ -1,1 +1,24 @@
 /* 외부스타일 */
+@import url(common/reset.css);
+#root{
+    width: 100%;
+    background-color: #850016
+}
+
+#root .header{
+    width: 100%;
+    height: 100px;
+    background-color: #222222;
+    color: #ffffff
+}
+#root .container{
+    width: 100%;
+    height: calc( 100vh - 100px - 100px);
+    /*calc수식은 반드시 띄어쓰기 한칸*/
+    background-color: #ffff00;
+}
+#root .footer{
+    width: 100%;
+    height: 100px;
+    background-color: #cccccc;
+}
